Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/SMAX_PS_ProductPlant__c.object-meta.xml
<CustomObject>
    <label>Product Plant</label>
    <nameField>
        <displayFormat>PPNT-{00000000}</displayFormat>
        <label>Product Plant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>