Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/BD_Credit_Relevant_Part__c.field-meta.xml
<CustomField>
    <fullName>BD_Credit_Relevant_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Relevant Part</label>
    <type>Checkbox</type>
</CustomField>