Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/BD_Refurbished_Part__c.field-meta.xml
<CustomField>
    <fullName>BD_Refurbished_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refurbished Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Plants (Refurbished Part)</relationshipLabel>
    <relationshipName>Product_Plants2</relationshipName>
    <type>Lookup</type>
</CustomField>