Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/BD_Refurbished_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Refurbished_Part_Number__c</fullName>
    <label>Refurbished Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>