Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/BD_Return_Part__c.field-meta.xml
<CustomField>
    <fullName>BD_Return_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Plants (Return Part)</relationshipLabel>
    <relationshipName>Product_Plants1</relationshipName>
    <type>Lookup</type>
</CustomField>