Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_ABC_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ABC_Indicator__c</fullName>
    <label>ABC Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>