Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_BatchManagementReqIndicator__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_BatchManagementReqIndicator__c</fullName>
    <label>Batch Managed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>