Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_HSN_Code__c</fullName>
    <description>HSN code used for tax</description>
    <label>HSN Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>