Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_HTS_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_HTS_Code__c</fullName>
    <description>Used to store HTS code which is required for the India for billing. (Source:S-692820)</description>
    <inlineHelpText>Used to store HTS code which is required for the India for billing</inlineHelpText>
    <label>HTS Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>