Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_MaterialStatus__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_MaterialStatus__c</fullName>
    <label>Plant Specific Material Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>