Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_PlannedDeliveryTimeInDays__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PlannedDeliveryTimeInDays__c</fullName>
    <label>Delivery Time In Days</label>
    <length>3</length>
    <type>Text</type>
</CustomField>