Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_Plant__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Plant__c</fullName>
    <label>Plant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>