Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ProfitCenter__c</fullName>
    <label>Profit Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>