Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/fields/SMAX_PS_UnitOfIssue__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_UnitOfIssue__c</fullName>
    <label>Unit Of Issue</label>
    <length>3</length>
    <type>Text</type>
</CustomField>