Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductPlant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Plant__c</columns>
    <columns>SMAX_PS_Product__c</columns>
    <columns>SMAX_PS_SerialNumberProfile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_Plant__c</field>
        <operation>contains</operation>
        <value>cn9</value>
    </filters>
    <label>All</label>
</ListView>